# english-speaking-app

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pytest.ini  turbo.json
.github/workflows/: cd.yml  ci.yml  model-eval.yml
ai-core/: requirements-dev.txt  requirements.txt
ai-core/configs/: eval_config.yaml  train_config.yaml
ai-core/data/: .gitkeep
ai-core/models/: .gitkeep
ai-core/scripts/: data_prep.py  evaluate.py  train.py
ai-core/src/: __init__.py
apps/backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
apps/backend/src/: main.py
apps/backend/src/api/: routes.py
apps/backend/src/api/endpoints/: audio.py  health.py  pronunciation.py
apps/backend/src/core/: config.py  logging.py
apps/backend/src/services/: audio.py  pronunciation.py
apps/frontend/: .env.example  next.config.js  package.json  tsconfig.json
docs/: README.md
docs/api/: README.md
docs/architecture/: README.md
docs/architecture/adr/: 001-monorepo-structure.md  002-asr-model-choice.md  003-mcp-integration.md  004-vietnamese-interference.md
docs/models/: README.md
docs/setup/: README.md
infra/docker/: ai-core.Dockerfile  backend.Dockerfile  docker-compose.dev.yml  docker-compose.yml  frontend.Dockerfile
infra/docker/nginx/: nginx.conf
mcp/: README.md  claude_desktop_config.json  requirements.txt
mcp/src/: config.py  server.py  tools.py
tests/: conftest.py
tests/e2e/: cypress.config.ts
tests/integration/: test_api_integration.py
tests/unit/: __init__.py
tests/unit/ai_core/: __init__.py  test_model_evaluation.py
tests/unit/backend/: __init__.py  test_api_endpoints.py  test_audio_service.py  test_pronunciation_service.py
(+17 files in other folders)
